--- a/portfolio/requirements.txt
+++ b/portfolio/requirements.txt
@@ -1,6 +1,9 @@
 streamlit==0.82.0
+numpy==1.20.3
+pandas==1.2.4
 Pillow==8.2.0
 azure-cognitiveservices-vision-computervision==0.8.0
 azure-common==1.1.27
 yfinance==0.1.59
 altair==4.1.0
+#Write version
